--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -44,7 +44,7 @@ header h3 {
 
 .main-background-image {
   background-image: url("../images/space.jpg");
-  padding: 0 0 10% 0;
+  padding: 0 0 7% 0;
 }
 
 /* articles */
@@ -65,7 +65,6 @@ section .project {
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  display: inline-block;
   padding: 7%;
   margin: 3%;
 }
